--- a/notebooks/01.Sedona_QuickStart.ipynb
+++ b/notebooks/01.Sedona_QuickStart.ipynb
@@ -14,8 +14,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
     "from sedona.spark import *\n",
     "from pathlib import Path\n",
@@ -32,9 +30,15 @@
     "from sedona.sql import st_aggregates"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-25T09:36:58.885092Z",
+     "start_time": "2024-11-25T09:36:58.876736Z"
+    }
    },
-   "id": "fb3df0bf3041970d"
+   "id": "fb3df0bf3041970d",
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -75,9 +79,7 @@
     "#            'org.apache.sedona:sedona-spark-shaded-3.0_2.12:1.4.1,'\n",
     "#            'org.datasyslab:geotools-wrapper:1.4.0-28.2'). \\\n",
     "#     getOrCreate()\n",
-    "\n",
-    "# create a sedona context\n",
-    "sedona = SedonaContext.create(config)"
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -89,9 +91,45 @@
    "id": "cf5b69d059641924"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-25T09:37:47.297948Z",
+     "start_time": "2024-11-25T09:37:06.959299Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": 4,
+   "source": [
+    "# build a sedona session online\n",
+    "# build a sedona session with internet\n",
+    "config = SedonaContext.builder(). \\\n",
+    "    config('spark.jars.packages',\n",
+    "           'org.apache.sedona:sedona-spark-3.5_2.13:1.6.1,'\n",
+    "           'org.datasyslab:geotools-wrapper:1.6.1-28.2'). \\\n",
+    "    config('spark.jars.repositories', 'https://artifacts.unidata.ucar.edu/repository/unidata-all'). \\\n",
+    "getOrCreate()"
+   ],
+   "id": "2936453f10803184",
    "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-25T09:39:43.365838Z",
+     "start_time": "2024-11-25T09:39:33.058462Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# create a sedona context\n",
+    "sedona = SedonaContext.create(config)"
+   ],
+   "id": "bd28a56dfc5710ec",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
    "source": [
     "# get the spark context\n",
     "sc = sedona.sparkContext"
@@ -99,11 +137,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-09T11:57:12.842728324Z",
-     "start_time": "2024-04-09T11:57:12.791874299Z"
+     "end_time": "2024-11-25T09:39:46.666219Z",
+     "start_time": "2024-11-25T09:39:46.659121Z"
     }
    },
-   "id": "d5198037927a3c5e"
+   "id": "d5198037927a3c5e",
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -119,30 +159,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
    "source": [
-    "airports_file_path = \"/home/pengfei/git/GeoParquetAndSedona/data/shapefile/airports_shape\"\n",
-    "countries_file_path = \"/home/pengfei/git/GeoParquetAndSedona/data/shapefile/countries_shape\""
+    "root_dir = \"../data\"\n",
+    "airports_file_path = f\"{root_dir}/shapefile/airports_shape\"\n",
+    "countries_file_path = f\"{root_dir}/shapefile/countries_shape\""
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-09T11:59:12.449036829Z",
-     "start_time": "2024-04-09T11:59:12.407554164Z"
+     "end_time": "2024-11-25T09:46:53.573710Z",
+     "start_time": "2024-11-25T09:46:53.566193Z"
     }
    },
-   "id": "dbb8c375d088a727"
+   "id": "dbb8c375d088a727",
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "source": [
+    "# read countries shape file\n",
+    "countries = ShapefileReader.readToGeometryRDD(sc, countries_file_path)\n",
+    "countries_df = Adapter.toDf(countries, sedona)\n",
+    "countries_df.createOrReplaceTempView(\"country\")\n",
+    "countries_df.printSchema()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-25T09:46:57.789567Z",
+     "start_time": "2024-11-25T09:46:57.063277Z"
+    }
+   },
+   "id": "69665883402a17eb",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24/04/09 13:57:19 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
       "root\n",
       " |-- geometry: geometry (nullable = true)\n",
       " |-- featurecla: string (nullable = true)\n",
@@ -238,29 +292,30 @@
       " |-- NAME_SV: string (nullable = true)\n",
       " |-- NAME_TR: string (nullable = true)\n",
       " |-- NAME_VI: string (nullable = true)\n",
-      " |-- NAME_ZH: string (nullable = true)\n"
+      " |-- NAME_ZH: string (nullable = true)\n",
+      "\n"
      ]
     }
    ],
+   "execution_count": 7
+  },
+  {
+   "cell_type": "code",
    "source": [
-    "# read countries shape file\n",
-    "countries = ShapefileReader.readToGeometryRDD(sc, countries_file_path)\n",
-    "countries_df = Adapter.toDf(countries, sedona)\n",
-    "countries_df.createOrReplaceTempView(\"country\")\n",
-    "countries_df.printSchema()"
+    "# read airports shape file\n",
+    "airports = ShapefileReader.readToGeometryRDD(sc, airports_file_path)\n",
+    "airports_df = Adapter.toDf(airports, sedona)\n",
+    "airports_df.createOrReplaceTempView(\"airport\")\n",
+    "airports_df.printSchema()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-09T11:57:19.541528573Z",
-     "start_time": "2024-04-09T11:57:18.377569645Z"
+     "end_time": "2024-11-25T09:47:03.227775Z",
+     "start_time": "2024-11-25T09:47:03.020282Z"
     }
    },
-   "id": "69665883402a17eb"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "id": "75216c9ccf335d82",
    "outputs": [
     {
      "name": "stdout",
@@ -277,25 +332,12 @@
       " |-- gps_code: string (nullable = true)\n",
       " |-- iata_code: string (nullable = true)\n",
       " |-- wikipedia: string (nullable = true)\n",
-      " |-- natlscale: string (nullable = true)\n"
+      " |-- natlscale: string (nullable = true)\n",
+      "\n"
      ]
     }
    ],
-   "source": [
-    "# read airports shape file\n",
-    "airports = ShapefileReader.readToGeometryRDD(sc, airports_file_path)\n",
-    "airports_df = Adapter.toDf(airports, sedona)\n",
-    "airports_df.createOrReplaceTempView(\"airport\")\n",
-    "airports_df.printSchema()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-09T11:59:27.087513827Z",
-     "start_time": "2024-04-09T11:59:26.437966883Z"
-    }
-   },
-   "id": "75216c9ccf335d82"
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -310,29 +352,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "source": [
+    "# create a new dataframe to host the result of the join\n",
+    "countries_airport_df = sedona.sql(\"SELECT c.geometry as country_location, c.NAME_EN as country_name, a.geometry as airport_location, a.name as airport_name FROM country c, airport a WHERE ST_Contains(c.geometry, a.geometry)\")\n",
+    "countries_airport_df.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-25T09:47:10.299709Z",
+     "start_time": "2024-11-25T09:47:07.179424Z"
+    }
+   },
+   "id": "9ced4296fa57a45b",
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24/04/09 14:00:16 WARN JoinQuery: UseIndex is true, but no index exists. Will build index on the fly.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -360,27 +393,27 @@
       "|MULTIPOLYGON (((-...|United States of ...|POINT (-104.67379...|        Denver Int'l|\n",
       "|MULTIPOLYGON (((-...|United States of ...|POINT (-97.040371...|Dallas-Ft. Worth ...|\n",
       "|MULTIPOLYGON (((1...|            Thailand|POINT (100.602578...|     Don Muang Int'l|\n",
-      "+--------------------+--------------------+--------------------+--------------------+\n"
+      "+--------------------+--------------------+--------------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
      ]
     }
    ],
+   "execution_count": 9
+  },
+  {
+   "cell_type": "code",
    "source": [
-    "# create a new dataframe to host the result of the join\n",
-    "countries_airport_df = sedona.sql(\"SELECT c.geometry as country_location, c.NAME_EN as country_name, a.geometry as airport_location, a.name as airport_name FROM country c, airport a WHERE ST_Contains(c.geometry, a.geometry)\")\n",
-    "countries_airport_df.show()"
+    "countries_airport_df.printSchema()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-09T12:00:18.094408053Z",
-     "start_time": "2024-04-09T12:00:13.240666887Z"
+     "end_time": "2024-11-25T09:47:27.888864Z",
+     "start_time": "2024-11-25T09:47:27.877400Z"
     }
    },
-   "id": "9ced4296fa57a45b"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "id": "f55e334903638de9",
    "outputs": [
     {
      "name": "stdout",
@@ -390,26 +423,15 @@
       " |-- country_location: geometry (nullable = true)\n",
       " |-- country_name: string (nullable = true)\n",
       " |-- airport_location: geometry (nullable = true)\n",
-      " |-- airport_name: string (nullable = true)\n"
+      " |-- airport_name: string (nullable = true)\n",
+      "\n"
      ]
     }
    ],
-   "source": [
-    "countries_airport_df.printSchema()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-09T12:00:27.441713487Z",
-     "start_time": "2024-04-09T12:00:27.428764605Z"
-    }
-   },
-   "id": "f55e334903638de9"
+   "execution_count": 10
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [],
    "source": [
     "# create a table\n",
     "countries_airport_df.createOrReplaceTempView(\"country_airport\")"
@@ -417,31 +439,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-09T12:00:53.622913914Z",
-     "start_time": "2024-04-09T12:00:53.597850954Z"
+     "end_time": "2024-11-25T09:47:32.835299Z",
+     "start_time": "2024-11-25T09:47:32.812943Z"
     }
    },
-   "id": "e8ff03345982c4e"
+   "id": "e8ff03345982c4e",
+   "outputs": [],
+   "execution_count": 11
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "ename": "AnalysisException",
-     "evalue": "Table or view not found: country_airport; line 1 pos 74;\n'Sort ['airport_count DESC NULLS LAST], false\n+- 'Aggregate ['c.country_name, 'c.country_location], ['c.country_name, 'c.country_location, count(1) AS airport_count#357L]\n   +- 'SubqueryAlias c\n      +- 'UnresolvedRelation [country_airport], [], false\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAnalysisException\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[11], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m airports_count\u001B[38;5;241m=\u001B[39m\u001B[43msedona\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msql\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mSELECT c.country_name, c.country_location, count(*) as airport_count FROM country_airport c GROUP BY c.country_name, c.country_location sort by airport_count desc\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m      2\u001B[0m airports_count\u001B[38;5;241m.\u001B[39mshow(\u001B[38;5;241m5\u001B[39m)\n",
-      "File \u001B[0;32m~/.cache/pypoetry/virtualenvs/geoparquetandsedona-uqJLJxB7-py3.10/lib/python3.10/site-packages/pyspark/sql/session.py:1034\u001B[0m, in \u001B[0;36mSparkSession.sql\u001B[0;34m(self, sqlQuery, **kwargs)\u001B[0m\n\u001B[1;32m   1032\u001B[0m     sqlQuery \u001B[38;5;241m=\u001B[39m formatter\u001B[38;5;241m.\u001B[39mformat(sqlQuery, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n\u001B[1;32m   1033\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m-> 1034\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m DataFrame(\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_jsparkSession\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msql\u001B[49m\u001B[43m(\u001B[49m\u001B[43msqlQuery\u001B[49m\u001B[43m)\u001B[49m, \u001B[38;5;28mself\u001B[39m)\n\u001B[1;32m   1035\u001B[0m \u001B[38;5;28;01mfinally\u001B[39;00m:\n\u001B[1;32m   1036\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(kwargs) \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0\u001B[39m:\n",
-      "File \u001B[0;32m~/.cache/pypoetry/virtualenvs/geoparquetandsedona-uqJLJxB7-py3.10/lib/python3.10/site-packages/py4j/java_gateway.py:1321\u001B[0m, in \u001B[0;36mJavaMember.__call__\u001B[0;34m(self, *args)\u001B[0m\n\u001B[1;32m   1315\u001B[0m command \u001B[38;5;241m=\u001B[39m proto\u001B[38;5;241m.\u001B[39mCALL_COMMAND_NAME \u001B[38;5;241m+\u001B[39m\\\n\u001B[1;32m   1316\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcommand_header \u001B[38;5;241m+\u001B[39m\\\n\u001B[1;32m   1317\u001B[0m     args_command \u001B[38;5;241m+\u001B[39m\\\n\u001B[1;32m   1318\u001B[0m     proto\u001B[38;5;241m.\u001B[39mEND_COMMAND_PART\n\u001B[1;32m   1320\u001B[0m answer \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mgateway_client\u001B[38;5;241m.\u001B[39msend_command(command)\n\u001B[0;32m-> 1321\u001B[0m return_value \u001B[38;5;241m=\u001B[39m \u001B[43mget_return_value\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m   1322\u001B[0m \u001B[43m    \u001B[49m\u001B[43manswer\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgateway_client\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtarget_id\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mname\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1324\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m temp_arg \u001B[38;5;129;01min\u001B[39;00m temp_args:\n\u001B[1;32m   1325\u001B[0m     temp_arg\u001B[38;5;241m.\u001B[39m_detach()\n",
-      "File \u001B[0;32m~/.cache/pypoetry/virtualenvs/geoparquetandsedona-uqJLJxB7-py3.10/lib/python3.10/site-packages/pyspark/sql/utils.py:196\u001B[0m, in \u001B[0;36mcapture_sql_exception.<locals>.deco\u001B[0;34m(*a, **kw)\u001B[0m\n\u001B[1;32m    192\u001B[0m converted \u001B[38;5;241m=\u001B[39m convert_exception(e\u001B[38;5;241m.\u001B[39mjava_exception)\n\u001B[1;32m    193\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(converted, UnknownException):\n\u001B[1;32m    194\u001B[0m     \u001B[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001B[39;00m\n\u001B[1;32m    195\u001B[0m     \u001B[38;5;66;03m# JVM exception message.\u001B[39;00m\n\u001B[0;32m--> 196\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m converted \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[1;32m    197\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m    198\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m\n",
-      "\u001B[0;31mAnalysisException\u001B[0m: Table or view not found: country_airport; line 1 pos 74;\n'Sort ['airport_count DESC NULLS LAST], false\n+- 'Aggregate ['c.country_name, 'c.country_location], ['c.country_name, 'c.country_location, count(1) AS airport_count#357L]\n   +- 'SubqueryAlias c\n      +- 'UnresolvedRelation [country_airport], [], false\n"
-     ]
-    }
-   ],
    "source": [
     "airports_count=sedona.sql(\"SELECT c.country_name, c.country_location, count(*) as airport_count FROM country_airport c GROUP BY c.country_name, c.country_location sort by airport_count desc\")\n",
     "airports_count.show(5)"
@@ -449,11 +456,31 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-09T12:00:51.270720808Z",
-     "start_time": "2024-04-09T12:00:50.736493300Z"
+     "end_time": "2024-11-25T09:47:40.481696Z",
+     "start_time": "2024-11-25T09:47:35.690665Z"
     }
    },
-   "id": "717726600a3a81fb"
+   "id": "717726600a3a81fb",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+-------------+\n",
+      "|        country_name|    country_location|airport_count|\n",
+      "+--------------------+--------------------+-------------+\n",
+      "|United States of ...|MULTIPOLYGON (((-...|           35|\n",
+      "|              Canada|MULTIPOLYGON (((-...|           15|\n",
+      "|              Mexico|MULTIPOLYGON (((-...|           12|\n",
+      "|              Brazil|MULTIPOLYGON (((-...|           12|\n",
+      "|People's Republic...|MULTIPOLYGON (((1...|            7|\n",
+      "+--------------------+--------------------+-------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 12
   },
   {
    "cell_type": "code",
