--- a/notebooks/02.sedona_read_various_data_format.ipynb
+++ b/notebooks/02.sedona_read_various_data_format.ipynb
@@ -21,8 +21,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
    "source": [
     "from sedona.spark import *\n",
     "import geopandas as gpd\n",
@@ -37,11 +35,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T09:43:14.299299292Z",
-     "start_time": "2024-04-16T09:43:14.161835728Z"
+     "end_time": "2024-11-25T10:03:58.626528Z",
+     "start_time": "2024-11-25T10:03:57.058964Z"
     }
    },
-   "id": "ce7c87816a39c1a6"
+   "id": "ce7c87816a39c1a6",
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -114,9 +114,7 @@
     "            'org.apache.sedona:sedona-spark-shaded-3.0_2.12:1.4.1,' \n",
     "            'org.datasyslab:geotools-wrapper:1.4.0-28.2'). \\\n",
     "     getOrCreate()\n",
-    "\n",
-    "# create a sedona context\n",
-    "sedona = SedonaContext.create(config)"
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -128,26 +126,47 @@
    "id": "7b1a2689b9abef60"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-25T10:05:14.859305Z",
+     "start_time": "2024-11-25T10:05:01.372546Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
    "source": [
+    "# build a sedona session with internet\n",
+    "config = SedonaContext.builder(). \\\n",
+    "    config('spark.jars.packages',\n",
+    "           'org.apache.sedona:sedona-spark-3.5_2.13:1.6.1,'\n",
+    "           'org.datasyslab:geotools-wrapper:1.6.1-28.2'). \\\n",
+    "    config('spark.jars.repositories', 'https://artifacts.unidata.ucar.edu/repository/unidata-all'). \\\n",
+    "getOrCreate()"
+   ],
+   "id": "a86336a17bf38b98",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "# create a sedona context\n",
+    "sedona = SedonaContext.create(config)\n",
     "sc = sedona.sparkContext\n",
     "\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T09:39:31.055684767Z",
-     "start_time": "2024-04-16T09:39:31.017951529Z"
+     "end_time": "2024-11-25T10:05:23.406967Z",
+     "start_time": "2024-11-25T10:05:16.194140Z"
     }
    },
-   "id": "ec2dc3be27ed3c86"
+   "id": "ec2dc3be27ed3c86",
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
    "source": [
     "# this sets the encoding of shape files\n",
     "sc.setSystemProperty(\"sedona.global.charset\", \"utf8\")"
@@ -155,11 +174,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T09:39:33.213922268Z",
-     "start_time": "2024-04-16T09:39:33.124781306Z"
+     "end_time": "2024-11-25T10:31:14.987339Z",
+     "start_time": "2024-11-25T10:31:14.968955Z"
     }
    },
-   "id": "cb60751167bf9567"
+   "id": "cb60751167bf9567",
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -173,7 +194,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "source": [
+    "win_root_dir = \"C:/Users/PLIU/Documents/ubuntu_share/data_set\"\n",
+    "lin_root_dir = \"/home/pengfei/data_set\"\n",
+    "\n",
+    "fr_commune_file_path = f\"{win_root_dir}/kaggle/geospatial/communes_fr_shape\"\n",
+    "\n",
+    "# read communes shape file\n",
+    "fr_commune_rdd = ShapefileReader.readToGeometryRDD(sc, fr_commune_file_path)\n",
+    "fr_commune_df = Adapter.toDf(fr_commune_rdd, sedona)\n",
+    "fr_commune_df.printSchema()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-25T10:08:11.518064Z",
+     "start_time": "2024-11-25T10:08:10.583238Z"
+    }
+   },
+   "id": "e4172408db2d7a3b",
    "outputs": [
     {
      "name": "stdout",
@@ -184,26 +223,43 @@
       " |-- insee: string (nullable = true)\n",
       " |-- nom: string (nullable = true)\n",
       " |-- wikipedia: string (nullable = true)\n",
-      " |-- surf_ha: string (nullable = true)\n"
+      " |-- surf_ha: string (nullable = true)\n",
+      "\n"
      ]
     }
    ],
-   "source": [
-    "fr_commune_file_path = \"/home/pengfei/data_set/kaggle/geospatial/communes_fr_shape\"\n",
-    "\n",
-    "# read communes shape file\n",
-    "fr_commune_rdd = ShapefileReader.readToGeometryRDD(sc, fr_commune_file_path)\n",
-    "fr_commune_df = Adapter.toDf(fr_commune_rdd, sedona)\n",
-    "fr_commune_df.printSchema()"
-   ],
+   "execution_count": 4
+  },
+  {
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T11:26:36.150913384Z",
-     "start_time": "2024-04-16T11:26:35.880590702Z"
+     "end_time": "2024-11-25T10:31:18.616330Z",
+     "start_time": "2024-11-25T10:31:18.518532Z"
     }
    },
-   "id": "e4172408db2d7a3b"
+   "cell_type": "code",
+   "source": "fr_commune_df.show(5)",
+   "id": "fa4a13e912e462e6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+--------------------+--------------------+--------------------+\n",
+      "|            geometry|               insee|                 nom|           wikipedia|             surf_ha|\n",
+      "+--------------------+--------------------+--------------------+--------------------+--------------------+\n",
+      "|POLYGON ((9.32016...|2B222            ...|Pie-d'Orezza     ...|fr:Pie-d'Orezza  ...|     573.00000000...|\n",
+      "|POLYGON ((9.20010...|2B137            ...|Lano             ...|fr:Lano          ...|     824.00000000...|\n",
+      "|POLYGON ((9.27757...|2B051            ...|Cambia           ...|fr:Cambia        ...|     833.00000000...|\n",
+      "|POLYGON ((9.25119...|2B106            ...|Érone            ...|fr:Érone         ...|     393.00000000...|\n",
+      "|POLYGON ((9.28339...|2B185            ...|Oletta           ...|fr:Oletta        ...|    2674.00000000...|\n",
+      "+--------------------+--------------------+--------------------+--------------------+--------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -250,8 +306,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [],
    "source": [
     "from pyspark.sql import DataFrame\n",
     "\n",
@@ -267,16 +321,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T11:17:33.041582514Z",
-     "start_time": "2024-04-16T11:17:32.937479767Z"
+     "end_time": "2024-11-25T10:24:10.024048Z",
+     "start_time": "2024-11-25T10:24:09.997552Z"
     }
    },
-   "id": "2a527d00100f901d"
+   "id": "2a527d00100f901d",
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [],
    "source": [
     "# the gps coordinates for kremlin-Bicetre is 48.8100° N, 2.3539° E\n",
     "\n",
@@ -286,16 +340,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T11:25:03.466071729Z",
-     "start_time": "2024-04-16T11:25:03.368708223Z"
+     "end_time": "2024-11-25T10:24:16.708044Z",
+     "start_time": "2024-11-25T10:24:16.690149Z"
     }
    },
-   "id": "473adcb6d72b74d4"
+   "id": "473adcb6d72b74d4",
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "outputs": [],
    "source": [
     "\n",
     "kb_nearest_shape_df = get_nearest_commune(fr_commune_df,kb_latitude,kb_longitude,10)"
@@ -303,74 +357,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T11:26:43.501617725Z",
-     "start_time": "2024-04-16T11:26:43.309946333Z"
+     "end_time": "2024-11-25T10:24:19.792999Z",
+     "start_time": "2024-11-25T10:24:19.573520Z"
     }
    },
-   "id": "5003cd8c6aa042e9"
+   "id": "5003cd8c6aa042e9",
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+--------------------+------------------+\n",
-      "|        commune_name|               insee|          distance|\n",
-      "+--------------------+--------------------+------------------+\n",
-      "|Le Kremlin-Bicêtr...|94043            ...|255.77950075329835|\n",
-      "|Gentilly         ...|94037            ...| 1138.204118880015|\n",
-      "|Villejuif        ...|94076            ...|2067.5242470555963|\n",
-      "|Arcueil          ...|94003            ...| 2269.505672821453|\n",
-      "|Cachan           ...|94016            ...|3169.7694895288837|\n",
-      "|Ivry-sur-Seine   ...|94041            ...| 3769.348960915047|\n",
-      "|Montrouge        ...|92049            ...| 4124.301376321017|\n",
-      "|L'Haÿ-les-Roses  ...|94038            ...| 4166.688028197553|\n",
-      "|Chevilly-Larue   ...|94021            ...| 4789.020724647998|\n",
-      "|Bagneux          ...|92007            ...|  5041.99634269013|\n",
-      "+--------------------+--------------------+------------------+\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 23:>                                                         (0 + 1) / 1]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 7.96 ms, sys: 1.26 ms, total: 9.22 ms\n",
-      "Wall time: 7.45 s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "10"
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "%%time\n",
     "\n",
@@ -380,11 +376,47 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T11:26:51.698740434Z",
-     "start_time": "2024-04-16T11:26:44.152417075Z"
+     "end_time": "2024-11-25T10:24:24.657560Z",
+     "start_time": "2024-11-25T10:24:21.515387Z"
     }
    },
-   "id": "d1ea6fde05bbf929"
+   "id": "d1ea6fde05bbf929",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+-----+------------------+\n",
+      "|      commune_name|insee|          distance|\n",
+      "+------------------+-----+------------------+\n",
+      "|Le Kremlin-Bicêtre|94043|198.60307108585405|\n",
+      "|          Gentilly|94037| 798.3521490770968|\n",
+      "|           Arcueil|94003|1543.0937442695515|\n",
+      "|         Villejuif|94076| 2007.793912679607|\n",
+      "|    Ivry-sur-Seine|94041| 2489.634383841373|\n",
+      "|            Cachan|94016| 2590.828517555236|\n",
+      "|         Montrouge|92049| 2750.714176859015|\n",
+      "|           Bagneux|92007| 3462.091511432535|\n",
+      "|   Vitry-sur-Seine|94081|3845.1624363327196|\n",
+      "|   L'Haÿ-les-Roses|94038| 3942.190017739479|\n",
+      "+------------------+-----+------------------+\n",
+      "\n",
+      "CPU times: total: 0 ns\n",
+      "Wall time: 3.13 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
