--- a/notebooks/basic_tutorial/01.Sedona_QuickStart.ipynb
+++ b/notebooks/basic_tutorial/01.Sedona_QuickStart.ipynb
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# create a table\n",
+    "# create a new view to store the result of the geo join\n",
     "countries_airport_df.createOrReplaceTempView(\"country_airport\")"
    ],
    "metadata": {
@@ -724,12 +724,75 @@
    "execution_count": 23
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-25T14:24:20.312702Z",
+     "start_time": "2024-11-25T14:24:19.984457Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "out_path = f\"{data_dir}/tmp/france.parquet\"\n",
+    "france_airports.write.mode(\"overwrite\").format(\"geoparquet\").save(out_path)"
+   ],
+   "id": "7c0e125026502f21",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "7c0e125026502f21"
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-25T14:25:38.926610Z",
+     "start_time": "2024-11-25T14:25:38.308379Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "tmp_df = sedona.read.format(\"geoparquet\").load(out_path)\n",
+    "tmp_df.show(5,truncate=False)"
+   ],
+   "id": "9f07a00eefe5d829",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------+\n",
+      "|country_name                                |airport_name                                                                                                                                                                                            |airport_location                            |\n",
+      "+--------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------+\n",
+      "|France                                      |Charles de Gaulle Int'l                                                                                                                                                                                 |POINT (2.5418677673945727 49.01442009693855)|\n",
+      "|France                                      |Paris Orly                                                                                                                                                                                              |POINT (2.367379127837731 48.73130304580517) |\n",
+      "+--------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-25T14:25:50.463490Z",
+     "start_time": "2024-11-25T14:25:50.454473Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "tmp_df.printSchema()",
+   "id": "64c6ccc5f12b7056",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- country_name: string (nullable = true)\n",
+      " |-- airport_name: string (nullable = true)\n",
+      " |-- airport_location: geometry (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 27
   }
  ],
  "metadata": {
